[tool.poetry]
name = "alfred"
version = "0.1.0"
description = ""
authors = ["rmedvedo <rmedvedo@cisco.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12.5,<=3.12.6"
crewai = "^0.79.4"
langchain-ollama = "^0.2.0"
crewai-tools = "^0.14.0"
gitpython = "^3.1.43"
pygithub = "^2.5.0"
langgraph = "^0.2.46"
langchain-google-vertexai = "^2.0.7"
functions-framework = "^3.8.1"
anthropic = "^0.39.0"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.24.0"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
