[tool.poetry]
name = "alfred"
version = "0.1.0"
description = ""
authors = ["rmedvedo <rmedvedo@cisco.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12.5,<=3.12.6"
pygithub = "^2.5.0"
langgraph = "^0.2.46"
python-dotenv = "^1.0.1"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
langchain-openai = "^0.2.8"
requests = "^2.32.3"
langchain-core = "^0.3.18"
typing-extensions = "^4.12.2"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.24.0"
deptry = "^0.21.0"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
