[tool.poetry]
name = "alfred"
version = "0.1.0"
description = ""
authors = ["rmedvedo <rmedvedo@cisco.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12.6,<=3.12.9"
pygithub = "^2.5.0"
langgraph = "^0.2.46"
python-dotenv = "^1.0.1"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
langchain-openai = "^0.2.8"
requests = "^2.32.3"
langchain-core = "^0.3.18"
typing-extensions = "^4.12.2"
pydantic = ">=2.0.0"
langchain-google-vertexai = "^2.0.8"
boto3 = "1.35.72"
anthropic = "0.40.0"
torch = "2.6.0"
sentence-transformers = "^3.3.1"
numpy = "^1.26"
agp-api = "^0.0.5"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.24.0"
deptry = "^0.21.0"
boto3-stubs = { extras = ["secretsmanager"], version = "^1.35.73" }
mypy = "^1.14.1"
ruff = "^0.8.6"
watchfiles = "^1.0.3"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
strict_concatenate = true
check_untyped_defs = true
exclude = ['/agents/', '/pr_graph/']

[tool.ruff]
builtins = ["_"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 150

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F", "B"]
ignore = ["E501"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
